# network-optix-test-1-tcp-server-hash

./: .appveyor.yml  .gitmodules  .travis.yml  CMakeLists.txt  Makefile.hand  README.md  TODO.md  prepare.cmd
include/: sha256calculator.h
sha256calc/: sha256calculator.cpp
src/: CMakeLists.txt  hash_server.cpp  server.cpp
test/: CMakeLists.txt  sha256calculator_tests.cpp
